--- a/producer-frontend/index.html
+++ b/producer-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Crypto Live Prices</title>
+    <title>Producer Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
